centjes-gen/test_resources/balance/error/as-is/BE_ASSERTION-wrong-currency.cent
currency USD 0.01
currency EUR 0.01

account assets
account income

2023-12-09
  * assets +2 EUR
  * income -2 EUR
  + assert assets = +3 USD
